tests/paczka1/fuzzy1/73731901.err
Error in line 1: sX5 S32 50,8
Error in line 20: CqVQchCcUvX S32 48,2
Error in line 29: S71 A476 48,6
Error in line 11: GC3psv3 S71 6,6
